[tool.poetry]
name = "medsam"
version = "0.1.0"
description = ""
authors = ["gnefihs <46212010+gnefihs@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
ipykernel = "^6.29.5"
monai = "^1.4.0"
matplotlib = "^3.10.0"
scikit-image = "^0.25.0"
simpleitk = "^2.4.0"
nibabel = "^5.3.2"
tqdm = "^4.67.1"
scipy = "^1.15.0"
ipympl = "^0.9.6"
opencv-python = "^4.10.0.84"
jupyterlab = "^4.3.4"
ipywidgets = "^8.1.5"
pyqt5 = "^5.15.11"
pandas = "^2.2.3"
torchsr = "^1.0.4"
notebook = "^7.3.2"
pynrrd = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
